--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,21 @@
             "type": "image/png",
             "sizes": "192x192"
         }
+        {
+            "src": "/images/missiondb360.png",
+            "type": "image/png",
+            "sizes": "360x360"
+        }
+        {
+            "src": "/images/missiondb64.png",
+            "type": "image/png",
+            "sizes": "64x64"
+        }
+        {
+            "src": "/images/missiondb32.png",
+            "type": "image/png",
+            "sizes": "32x32"
+        }
     ],
     "start_url": "/index.html",
     "background_color": "#8C9BFB",
