--- a/manifest.json
+++ b/manifest.json
@@ -4,27 +4,27 @@
     "name": "Mission Database for Underresourced Medical Care",
     "icons": [
         {
-            "src": "/images/missiondb512.png",
+            "src": "images/missiondb512.png",
             "type": "image/png",
             "sizes": "512x512"
         },
         {
-            "src": "/images/missiondb192.png",
+            "src": "images/missiondb192.png",
             "type": "image/png",
             "sizes": "192x192"
         },
         {
-            "src": "/images/missiondb360.png",
+            "src": "images/missiondb360.png",
             "type": "image/png",
             "sizes": "360x360"
         },
         {
-            "src": "/images/missiondb64.png",
+            "src": "images/missiondb64.png",
             "type": "image/png",
             "sizes": "64x64"
         },
         {
-            "src": "/images/missiondb32.png",
+            "src": "images/missiondb32.png",
             "type": "image/png",
             "sizes": "32x32"
         }
